--- a/css/utils/helpers.css
+++ b/css/utils/helpers.css
@@ -157,3 +157,12 @@
 .hx-3 {
   --color-highlight-end: var(--color-highlight-end);
 }
+.hx-1 {
+  background: none;
+  color: var(--color-highlight-start-map, #e7e5d9);
+  display: inline-block;
+  position: relative;
+  white-space: nowrap;}
+.hx-2 {
+  --color-highlight-end: var(--color-highlight-start-map, #e7e5d9);
+  }
