--- a/css/utils/helpers.css
+++ b/css/utils/helpers.css
@@ -88,14 +88,14 @@
 }
 
 .content__title,
-.content__title_W,
-.content__title_h2 {
+.content__title_W
+{
   grid-area: content-title;
   letter-spacing: normal;
   text-transform: uppercase;
   line-height: 1;
   font-weight: normal;
-  font-size: clamp(2rem, 6vw, 5rem);
+  font-size: clamp(2rem, 3vw, 4rem);
   margin: 0;
   font-variation-settings: "slnt" 0, "wdth" 400, "wght" 900, "INKT" 400;
 }
@@ -108,7 +108,7 @@
   line-height: 0.9;
   text-transform: uppercase;
   margin-left: -0.065em;
-  font-size: clamp(2rem, 6vw, 5rem);
+  font-size: clamp(2rem, 3vw, 4rem);
   letter-spacing: 0.105em;
   font-variation-settings: "slnt" 0, "wdth" 400, "wght" 900, "INKT" 400;
 }
@@ -116,10 +116,10 @@
 .content__text {
   grid-area: content-text;
   margin: 0;
-  max-width: 500px;
+  max-width: 750px;
   text-align: center;
   line-height: 1.5;
-  padding: 0 1rem;
+  padding: 0 1.2rem;
   backface-visibility: hidden;
 }
 .content__text--left {
@@ -136,7 +136,7 @@
 }
 
 .text-meta {
-  font-size: 0.95rem;
+  font-size: 1.2rem;
   line-height: 1.4;
 }
 .text-large {
