noise for background

--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,9 @@
 /* LAYOUT */
 @import url("./layout/frame.css");
 @import url("./layout/hero.css");
-@import url("./layout/brand.css");
+
+/* Css del logo inicial */
+@import url("./layout/brand.css"); 
 
 @import url("./layout/layout-columns.css");
 @import url("./layout/footer.css");
