--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,7 @@
 @import url("./layout/brand.css"); 
 
 @import url("./layout/layout-columns.css");
+@import url("./layout/map&watch.css");
 @import url("./layout/footer.css");
 
 
