--- a/css/layout/frame.css
+++ b/css/layout/frame.css
@@ -1,53 +1,85 @@
 body {
   margin: 0;
-  color: var(--color-text); /* text color */
+  padding: 0;
+  color: var(--color-text);
   background-color: var(--color-bg);
   font-family: "power_grotesk_bold", sans-serif;
-  font-variation-settings: "slnt" 0, "wdth" 150, "wght" 500, "INKT" 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100%;
   overflow-x: hidden;
 }
 
-
-body {
-	margin: 0;
-	--color-text: #111;
-	--color-bg: #f8ecde;
-	--color-link: #b19e7f;
-	--color-link-hover: #000;
-	color: var(--color-text);
-	/* background-color: #f8ecde; */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+.layout {
+  display: flex;
+  min-height: 100vh;
 }
 
-/* Grainy texture animation by Geoff Graham https://css-tricks.com/snippets/css/animated-grainy-texture/ */
+/* Sidebar fijo a la izquierda */
+.sidebar {
+  width: 5%; /* o 5% si prefieres, pero puede ser poco en pantallas grandes */
+  background-color: #00000023;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  z-index: 2000;
+}
+
+/* Contenido que se adapta */
+.content {
+  flex: 1;
+  padding: 2rem;
+  overflow-x: hidden;
+  position: relative;
+}
+
+
+
 
 main::before {
-	animation: grain 8s steps(10) infinite;
-	background-image: url(../../img/prueba-grain-01-01.png);
-	content: '';
-	height: 300%;
-	left: -50%;
-	opacity: 0.6;
-	position: fixed;
-	top: -100%;
-	width: 300%;
+  animation: grain 8s steps(10) infinite;
+  background-image: url(../../img/prueba-grain-01-01.png);
+  content: "";
+  height: 300%;
+  left: -50%;
+  opacity: 0.6;
+  position: fixed;
+  top: -100%;
+  width: 300%;
 }
 
+
 @keyframes grain {
-  0%, 100% { transform:translate(0, 0); }
-  10% { transform:translate(-5%, -10%); }
-  20% { transform:translate(-15%, 5%); }
-  30% { transform:translate(7%, -25%); }
-  40% { transform:translate(-5%, 25%); }
-  50% { transform:translate(-15%, 10%); }
-  60% { transform:translate(15%, 0%); }
-  70% { transform:translate(0%, 15%); }
-  80% { transform:translate(3%, 35%); }
-  90% { transform:translate(-10%, 10%); }
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+  10% {
+    transform: translate(-5%, -10%);
+  }
+  20% {
+    transform: translate(-15%, 5%);
+  }
+  30% {
+    transform: translate(7%, -25%);
+  }
+  40% {
+    transform: translate(-5%, 25%);
+  }
+  50% {
+    transform: translate(-15%, 10%);
+  }
+  60% {
+    transform: translate(15%, 0%);
+  }
+  70% {
+    transform: translate(0%, 15%);
+  }
+  80% {
+    transform: translate(3%, 35%);
+  }
+  90% {
+    transform: translate(-10%, 10%);
+  }
 }
 
 p {
@@ -59,7 +91,6 @@ span {
   font-family: "power_grotesk_light";
   font-variation-settings: "slnt" 0, "wdth" 100, "wght" 400, "INKT" 400;
 }
-
 
 .frame {
   padding: var(--page-padding);
