--- a/css/layout/map&watch.css
+++ b/css/layout/map&watch.css
@@ -4,6 +4,12 @@
   width: 100vw;
 }
 
+.main-content {
+  padding-left: 5%;
+  display: flex;
+  flex-direction: row;
+}
+
 .right-column {
   flex-direction: column;
   justify-content: space-between;
@@ -190,3 +196,10 @@
   align-items: center;
   gap: 1rem;
 }
+
+
+
+
+
+
+
