--- a/css/utils/helpers.css
+++ b/css/utils/helpers.css
@@ -33,6 +33,40 @@
   color: var(--color-bg-7);
 }
 
+
+.wrap {
+  position: relative;
+  z-index: 0;
+}
+
+.wrap::before {
+  animation: grain 8s steps(10) infinite;
+  background-image: url(../../img/noise.png);
+  background-repeat: repeat;
+  content: '';
+  height: 300%;
+  width: 300%;
+  position: fixed;
+  top: -100%;
+  left: -100%;
+  opacity: 0.4;
+  z-index: 1;
+  pointer-events: none;
+}
+
+@keyframes grain {
+  0%, 100% { transform:translate(0, 0); }
+  10% { transform:translate(-5%, -10%); }
+  20% { transform:translate(-15%, 5%); }
+  30% { transform:translate(7%, -25%); }
+  40% { transform:translate(-5%, 25%); }
+  50% { transform:translate(-15%, 10%); }
+  60% { transform:translate(15%, 0%); }
+  70% { transform:translate(0%, 15%); }
+  80% { transform:translate(3%, 35%); }
+  90% { transform:translate(-10%, 10%); }
+}
+
 .content {
   padding: var(--page-padding);
   display: flex;
@@ -50,10 +84,11 @@
   padding-bottom: 30vh;
 }
 .content--sticky {
-  width: 96vw;
+  width: 94vw;
   height: 96vh;
   position: sticky;
   top: 0;
+  left: 5.3%;
 
   margin-left: auto;
   margin-right: auto;
@@ -61,8 +96,16 @@
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
 
-  /* Solo como ejemplo visual */
 }
+
+
+
+
+
+
+
+
+
 
 .content--grid,
 .content--grid .content__inner {
@@ -128,9 +171,9 @@
 }
 
 .text-large_w {
-  color: #fff;
-  font-size: clamp(1rem, 5vw, 2rem);
-  max-width: 900px;
+  color: var(  --color-white-brand, #EFEFEF);
+  font-size: clamp(1rem, 3vw, 2rem);
+  max-width: 600px;
   margin: 0 0 0.85em 0;
   line-height: 1.2;
     text-align: center;
@@ -139,7 +182,7 @@
 
 
 .text-large_M {
-  color: #fff;
+  color: var(  --color-white-brand, #EFEFEF);
   font-size: clamp(1rem, 1.3rem, 2rem);
   max-width: 900px;
   margin: 0 0 0.85em 0;
