--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -42,21 +42,16 @@
   font-display: swap;
 }
 
-.b612-regular {
-  font-family: "B612", sans-serif;
+.work-sans-regular {
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
 }
-.b612-bold {
-  font-family: "B612", sans-serif;
+
+.work-sans-bold {
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 700;
-}
-.b612-regular-italic {
-  font-family: "B612", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-.b612-bold-italic {
-  font-family: "B612", sans-serif;
-  font-weight: 700;
-  font-style: italic;
+  font-style: normal;
 }
