arreglos del leyoot

--- a/css/base.css
+++ b/css/base.css
@@ -12,6 +12,8 @@
 
 @import url("./layout/layout-columns.css");
 @import url("./layout/map&watch.css");
+@import url("./layout/sliders.css");
+
 @import url("./layout/footer.css");
 
 
