--- a/css/layout/map&watch.css
+++ b/css/layout/map&watch.css
@@ -32,9 +32,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: transparent; 
+  background: transparent;
   box-sizing: border-box;
+  position: relative; 
 }
+
 
 
 
