--- a/css/layout/map&watch.css
+++ b/css/layout/map&watch.css
@@ -198,8 +198,12 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  
 }
 
+  #content-row {
+    opacity: 0; /* Oculto por defecto */
+  }
 
 
 
