--- a/css/base/cursor.css
+++ b/css/base/cursor.css
@@ -1,3 +1,7 @@
+
+body {
+  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16'><circle cx='8' cy='8' r='4' fill='white'/></svg>") 8 8, auto;
+}
 .custom-cursor {
     position: fixed;
     pointer-events: none;
