--- a/css/utils/helpers.css
+++ b/css/utils/helpers.css
@@ -97,9 +97,9 @@
 
 .text-large_M {
   color: var(  --color-white-brand, #EFEFEF);
-  font-size: clamp(1rem, 1.3rem, 2rem);
+  font-size: clamp(.7rem, 1rem, 2.7rem);
   max-width: 900px;
-  margin: 0 0 0.85em 0;
+  margin: 0 0 1.5em 0;
   line-height: 1.2;
   text-align: center;
 }
