--- a/css/components/menu-header.css
+++ b/css/components/menu-header.css
@@ -183,23 +183,40 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 6px;
-  width: 32px;
-  height: 32px;
+  width: 52px;
+  height: 52px;
   background: none;
   border-radius: 6px 0px 6px 0px;
   cursor: pointer;
-  background-color: #ffffff;
+  fill: salmon;
+  z-index: 999;
 }
- 
+
 .hamburger span {
-  height: 3px;
-  width: 100%;
-  background-color: rgb(0, 0, 0);
+  height: 5px;
+  width: 80%;
+  background-color: #eeeeee;
   display: block;
-  border-radius: 2px;
-  transition: 0.3s ease;
+  border-radius: 2px 0px 2px 0px;
+  transition: all 0.3s ease;
+  transform-origin: center;
 }
+
+/* Transformaciones para convertirlo en X */
+.hamburger.is-active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.is-active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.is-active span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
 
 .buttons-menu {
   position: fixed;
@@ -211,19 +228,7 @@
   gap: 1rem;
   z-index: 1001;
 }
-/* .phi {
-  width: 40px;
-  height: 40px;
-  background-image: url("../../img/phi-01.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  background-color: transparent;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-} */
+
 
  .phi {
   position: relative;
