--- a/css/layout/frame.css
+++ b/css/layout/frame.css
@@ -32,7 +32,7 @@ body {
 
 main::before {
   animation: grain 8s steps(10) infinite;
-  background-image: url(../../img/prueba-grain-01-01.png);
+  background-image: url(../../img/noise-white20x2-01.png);
   content: "";
   height: 300%;
   left: -50%;
