--- a/css/layout/map&watch.css
+++ b/css/layout/map&watch.css
@@ -25,7 +25,6 @@
   height: auto;
 }
 
-
 /* COLUMNA IZQUIERDA: 40% */
 .left-column {
   width: 50%;
@@ -34,11 +33,8 @@
   justify-content: space-between;
   background: transparent;
   box-sizing: border-box;
-  position: relative; 
+  position: relative;
 }
-
-
-
 
 .center-controls {
   position: absolute;
@@ -51,23 +47,20 @@
   padding: 2rem; /* opcional, para separarlo un poco del borde */
   align-items: center;
   background: rgba(77, 77, 77, 0.301); /* Fondo translúcido */
-  backdrop-filter: blur(12px);          /* Desenfoque para el glassmorphismo */
-  -webkit-backdrop-filter: blur(12px);  /* Compatibilidad con Safari */
+  backdrop-filter: blur(12px); /* Desenfoque para el glassmorphismo */
+  -webkit-backdrop-filter: blur(12px); /* Compatibilidad con Safari */
   border: 1px solid rgba(255, 255, 255, 0.2); /* Sutil borde brillante */
   border-top-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   z-index: 301;
 }
 
-
-  
-
 .hour {
   font-family: "power_grotesk_bold", sans-serif;
   font-size: 1.5rem;
   margin-top: -1.5rem;
   margin-bottom: 0.5rem;
-  color: var(--color-white-brand,  #EFEFEF);
+  color: var(--color-white-brand, #efefef);
 }
 
 #prueba {
@@ -89,7 +82,7 @@
 #hourSlider {
   width: 180px;
   height: 6px;
-  background: var(--color-white-brand,  #EFEFEF);
+  background: var(--color-white-brand, #efefef);
   border-radius: 3px;
   outline: none;
   appearance: none;
@@ -102,7 +95,7 @@
   appearance: none;
   width: 16px;
   height: 16px;
-  background: var(--color-white-brand,  #EFEFEF);
+  background: var(--color-white-brand, #efefef);
   border-radius: 50%;
   cursor: pointer;
   margin-top: -5px;
@@ -146,8 +139,6 @@
   height: 6px;
 }
 
-  
-
 /* Reloj abajo */
 .time-ctrl {
   height: auto;
@@ -159,8 +150,6 @@
   color: var(--color-text, #0c0c0c);
   position: relative;
 }
-
-
 
 .right-column {
   width: 50%;
@@ -201,29 +190,17 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  
 }
 
-  #content-row {
-    opacity: 0; /* Oculto por defecto */
-  }
+#content-row {
+  opacity: 0; /* Oculto por defecto */
+}
 
 #maping-contorler {
-    opacity: 0; /* Oculto por defecto */
-  }
+  opacity: 0; /* Oculto por defecto */
+}
 
-
-
-
-
-
-
-
-
-
-
-
-  /* ---------- Tablets ---------- */
+/* ---------- Tablets ---------- */
 @media (max-width: 1024px) {
   .layout {
     flex-direction: column;
