--- a/css/components/menu-header.css
+++ b/css/components/menu-header.css
@@ -349,7 +349,7 @@
     flex-direction: row;
     padding: 0.5rem;
     gap: 0.5rem;
-    background-color: #ff6f61;
+    background-color: #ff6e6100;
     justify-content: flex-end; /* Esto los lleva a la derecha */
     align-items: center; /* Centrado vertical */
     display: flex
