--- a/css/layout/brand.css
+++ b/css/layout/brand.css
@@ -1,13 +1,65 @@
 .brand {
   display: flex;
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center;     /* Centra verticalmente */
-  height: 100vh;           /* Ocupa toda la altura de la pantalla */
-  width: 100vw;            /* Ocupa todo el ancho de la pantalla */
-  overflow: hidden;        /* Oculta contenido que se salga */
-  position: relative;      /* Permite posicionar elementos hijos */
+  justify-content: center;
+  align-items: center;        
+  
 }
 
 .branding{
   z-index: 10000;
+} 
+
+
+  #svg-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 200vh;
+    /* espacio para scroll */
+    overflow: hidden;
+  }
+
+  .svg-containedor {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+  }
+
+  /* ahora se oculta con opacity (para que GSAP pueda medir elementos) */
+  .hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .INDI path {
+    fill: #eee;
+  }
+
+  .LAB path {
+    fill: #eee;
+  }
+
+  .colorkey path {
+    fill: blueviolet;
+  }
+
+  svg {
+    width: 100%;
+    height: auto;
+  }
+
+
+
+  @media (max-width: 1024px) {
+  #svg-wrapper {
+    height: 200vh; /* más espacio en tablet */
+  }
+}
+
+@media (max-width: 770px) {
+  #svg-wrapper {
+    height: 300vh; /* más espacio en móvil */
+  }
 }
