--- a/css/components/loader.css
+++ b/css/components/loader.css
@@ -14,8 +14,6 @@
   animation: fadeIn 0.5s ease-out forwards;
 }
 
-
-
 .top-left {
   top: 20px;
   left: 20px;
@@ -35,31 +33,23 @@
   text-align: center;
 }
 
-
-
-.complment_loader
-{
-font-size: 1.4rem;
-color: #eeeeee;
-align-items: center;
-text-align: center;
-text-transform: uppercase;
-
+.complment_loader {
+  font-size: 1.4rem;
+  color: #eeeeee;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
 }
-
-
 
 .text_load {
   font-size: 1.4rem;
   margin-bottom: 1rem;
   color: #eeeeee;
   text-shadow: 0 0 6px rgba(255, 255, 255, 0.1);
-    font-family: "Work Sans", sans-serif;
+  font-family: "Work Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-
-  
 }
 
 /* Texto animado */
@@ -74,13 +64,22 @@ text-transform: uppercase;
 
 /* Animaciones */
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes blinkText {
-  0%, 100% { opacity: 0.7; }
-  50% { opacity: 1; }
+  0%,
+  100% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 1;
+  }
 }
 
 /* Barra de carga opcional */
@@ -100,15 +99,12 @@ text-transform: uppercase;
   transition: width 0.1s ease-in-out;
 }
 
-
-
-
 /* Íconos en las esquinas */
 .corner-icon1 {
   position: absolute;
   width: 70px;
   height: 70px;
-  z-index: 9999
+  z-index: 9999;
 }
 
 .top-left1 {
@@ -120,16 +116,6 @@ text-transform: uppercase;
   bottom: 0;
   right: 0;
 }
-
-
-
-
-
-
-
-
-
-
 
 /* ---------- Responsive Tablets ---------- */
 @media (max-width: 1024px) {
