--- a/css/base.css
+++ b/css/base.css
@@ -22,6 +22,8 @@
 /* COMPONENTS */
 @import url("./components/loader.css");
 @import url("./components/menu-header.css");
+@import url("./components/phi.css");
+
 @import url("./components/svg-container.css");
 @import url("./components/time-slider.css");
 
